添加通过smb更新功能

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="dialog_btn_cancel">cancel</string>
     <string name="dialog_btn_ok">ok</string>
     <string name="dialog_pwd_error">password error</string>
+    <string name="getremotefile">getRemoteFile</string>
+    <string name="enter_ip">Please enter ip</string>
 </resources>
